projet_GOCass/tests/tests/bad/func/multiple_func_def_ast.dot
PDfunction_1:pf_name.id = "f"
root -> PDfunction_1
PDfunction_1:pf_body -> PEblock_2
PDfunction_3:pf_name.id = "f"
root -> PDfunction_3
PDfunction_3:pf_body -> PEblock_4
PDfunction_5:pf_name.id = "main"
root -> PDfunction_5
PDfunction_5:pf_body -> PEblock_6
